<resources>
    <string name="app_name">Musem Viewer</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, username"</string>
    <string name="invalid_username">Username must be > 5 characters</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have account ?</string>
    <string name="agree_terms_and_conditions">I Agree with Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="auth_error"><![CDATA[Failed to perform authentication process. Please fill in your username & password correctly.]]></string>
    <string name="invalid_user">user not valid</string>
</resources>